--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ahash = "0.8.6"
 clap = "4.4.10"
+itertools = "0.12.0"
 nom = "7.1.3"
+ring-algorithm = "0.7.0"
 time = "0.3.30"
